Kubernetes/Services/commands-mssql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commands-mssql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: commands-mssql
  ports:
  - name: commands-mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
