Kubernetes/Services/commands-mssql-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commands-mssql-load-balancer-service
spec:
  type: LoadBalancer
  selector:
    app: commands-mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
