Kubernetes/Services/commands-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commands-node-port-service
spec:
  type: NodePort
  selector:
    app: commands-service
  ports:
    - name: commands-service
      protocol: TCP
      port: 80
      targetPort: 80
