Kubernetes/Services/platforms-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: platform-service
  ports:
  - name: platform-service
    protocol: TCP
    port: 80
    targetPort: 80
