Kubernetes/Services/platforms-mssql-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-mssql-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: platforms-mssql
  ports:
  - name: platforms-mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
