Kubernetes/Services/platforms-mssql-load-balancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platforms-mssql-load-balancer-service
spec:
  type: LoadBalancer
  selector:
    app: platforms-mssql
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
